# EasyPR

./: .gitignore  CMakeLists.txt  README.md  build_python_binding.sh  build_shared_objects.sh
include/: wrapper.h
model/: ann.xml
python/: plate_detector.i  plate_detector.py  setup.py  wrapper.cpp  wrapper.h
test/: wrapper.cpp
wrapper/: wrapper.cpp  wrapper.h
